# eidosian_forge

./: .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  :memory:  AGENTS.md  ARCHITECTURE.md  ELEVATION_PLAN.md  FORGE_STATUS.md  GEMINI.md  LICENSE  NEURAL_FORGE_PLAN.md  QUICKSTART.md  README.md  REVIEW_MASTER_PLAN.md  SESSION_REPORT_20260124.md  TEST_STATUS.md  TODO.md  WORKFLOWS_QUICKSTART.md  audit_vulnerabilities.py  clean_requirements.txt  eidos_env.sh  eidosian-forge.code-workspace  eidosian_roadmap.md  global_info.py  index.html  knowledge_plan.md  memory_data.json  prettier_targets.txt  pytest.ini  python_targets.txt  requirements.txt  ruff.toml  run_kernel_tick.py  tmp_git_sync.sh  version.py
agent_forge/: .gitignore  CURRENT_STATE.md  GLOSSARY.md  GOALS.md  INSTALL.md  ISSUES.md  Makefile  PLAN.md  README.md  ROADMAP.md  TODO.md  __init__.py  agent-forge.code-workspace  agent_core.py  multi_step_agent_data.json  pyproject.toml  pytest.ini  smol_agents_reference.md
article_forge/: CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  __init__.py  __init__.py.shadow_bak  article-forge.code-workspace  pyproject.toml
audit_forge/: CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  audit_core.py  pyproject.toml
code_forge/: ARCHITECTURE.md  CHANGELOG.md  CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  __init__.py  code_core.py  install.sh  pyproject.toml  requirements.txt
computer_control_forge/: CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  pyproject.toml  test_manual.py
crawl_forge/: CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  __init__.py  crawl-forge.code-workspace  crawl_core.py  pyproject.toml
diagnostics_forge/: CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  __init__.py  diagnostic-forge.code-workspace  diagnostics_core.py  pyproject.toml
doc_forge/: .eidosian.json  .gitignore  CONTRIBUTING.md  CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  __init__.py  doc-forge.code-workspace  doc_core.py  eidosian_config.yml  file_index.json  forge_status.json  install.sh  pyproject.toml  requirements.txt  setup.py  test_prompt.txt
eidos-brain/: .dockerignore  CURRENT_STATE.md  Dockerfile  GOALS.md  README.md  TODO.md  compose.yaml  pyproject.toml  requirements.txt  test_log
eidos_mcp/: CURRENT_STATE.md  GEMINI_SETUP.md  GOALS.md  INSTALL.md  README.md  TODO.md  TODO_eidos_mcp.md  check_mcp.py  eidos_fetch.py  eidos_mcp_server.py  pyproject.toml  run_server.sh  run_server_sse.sh  test_nexus.py  verify_new_tools.py
figlet_forge/: CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  __init__.py  figlet_core.py  pyproject.toml  test_compat.py
file_forge/: .eidosian.json  CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  __init__.py  embedding_proxy.py  file_core.py  fs_graph.py  pyproject.toml  txt_copy.py
game_forge/: BENCHMARKS.md  CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  pyproject.toml
glyph_forge/: .gitignore  .pre-commit-config.yaml  AUDIT_MANIFEST.json  BRANDING.md  CHANGELOG.md  CURRENT_STATE.md  CURRENT_STATUS.md  DEMO.md  GLOSSARY.md  GOALS.md  INSTALL.md  ISSUES.md  LAUNCH_PLAYBOOK.md  MANIFEST.in  PLAN.md  PLAN_REFACTOR_GLYPH_FORGE.md  README.md  ROADMAP.md  TODO.md  eidos_profile.md  eidos_profile.yml  glossary.yml  glyph_stream.py  project_scope.md  project_structure.md  pyproject.toml  requirements.txt  rtd_tutorial.md  setup.py
knowledge_forge/: .eidosian.json  CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  __init__.py  graph_integration.py  knowledge_core.py  pyproject.toml  setup_docs.py
lib/: README.md  cli.py  py_lib.py  pyproject.toml
llm_forge/: CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  PLAN_EVOLUTION.md  README.md  ROADMAP.md  TODO.md  __init__.py  bench_baseline.json  bin  llm_core.py  pyproject.toml  requirements-dev.txt
memory_forge/: .eidosian.json  CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  __init__.py  memory_core.py  pyproject.toml
metadata_forge/: .eidosian.json  CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  pyproject.toml
mkey_forge/: CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  mkey-forge.code-workspace  pyproject.toml
narrative_forge/: CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  pyproject.toml
ollama_forge/: CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  ollama_model_index.json  pyproject.toml
prompt_forge/: CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  build_chrome_extension_example.md  github_copilot_prompt_guide.md  pyproject.toml
refactor_forge/: .eidosian.json  CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  __init__.py  pyproject.toml  refactor_core.py
repo_forge/: CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  create_repo.sh  pyproject.toml
sms_forge/: CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  pyproject.toml
terminal_forge/: .eidosian.json  .gitignore  CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  pyproject.toml
type_forge/: CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  __init__.py  pyproject.toml  type_core.py
version_forge/: CURRENT_STATE.md  GOALS.md  INSTALL.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  TODO.md  __init__.py  pyproject.toml  version_core.py
(+702072 files in other folders)
