[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent_forge"
version = "0.0.1"
description = "Eidos E3 Agent Forge - Minimal scaffolding for autonomous agents."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
    { name = "Eidos", email = "syntheticeidos@gmail.com" },
]
keywords = ["agent", "ai", "automation", "eidos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "typer>=0.9.0",  # For CLI tools
]

[project.scripts]
eidctl = "agent_forge.cli.eidctl:main"
eidosd = "agent_forge.cli.eidosd:main"
eidtop = "agent_forge.cli.eidtop:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_forge"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = ["pytest>=8.4"]