[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audit_forge"
version = "0.1.0"
description = "Eidosian Audit Forge - Tracking review coverage and tasks."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
    { name = "Eidos", email = "syntheticeidos@gmail.com" },
]
dependencies = [
    "pydantic>=2.6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
audit-forge = "audit_forge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/audit_forge"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
