[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code_forge"
version = "1.0.0"
description = "Eidosian Code Forge - AST analysis, code indexing, and library management."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
    { name = "Eidos", email = "syntheticeidos@gmail.com" },
]
keywords = ["code-analysis", "ast", "indexing", "static-analysis", "eidos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
]
refactor = [
    "libcst>=1.1.0",
    "rope>=1.11.0",
]
lint = [
    "black>=24.0.0",
    "ruff>=0.1.0",
]
parsers = [
    "tree-sitter>=0.22.3",
    "tree-sitter-language-pack>=0.2.0",
]

[project.scripts]
code-forge = "code_forge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_forge"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312"]
