[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eidos_mcp"
version = "0.6.0"
description = "Eidosian MCP Server - The Central Nervous System connecting all Forges."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
    { name = "Eidos", email = "syntheticeidos@gmail.com" },
]
keywords = ["mcp", "model-context-protocol", "server", "middleware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[server]>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    # It depends on ALL other forges, but they are local
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
eidos-mcp = "eidos_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/eidos_mcp"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = [
    "/home/lloyd/eidosian_forge/eidos_mcp/src",
    "/home/lloyd/eidosian_forge",
]
