[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "figlet_forge"
version = "0.1.2"
description = "Eidosian reimplementation extending pyfiglet with colorized ANSI support, Unicode rendering and intelligent fallbacks"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
    { name = "Eidos", email = "syntheticeidos@gmail.com" },
]
keywords = ["figlet", "ascii-art", "text", "forge", "eidosian", "typography", "cli", "ansi", "color"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyfiglet>=0.8.0",
    "rich>=12.0.0",
    "typer>=0.7.0",
    "colorama>=0.4.6",
    "wcwidth>=0.2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
]

[project.scripts]
figlet_forge = "figlet_forge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/figlet_forge", "figlet_core.py"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]