[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game_forge"
version = "0.1.0"
description = "Eidosian Game Forge - A collection of simulation and game projects"
readme = "README.md"
authors = [
  { name = "Eidosian Nexus", email = "eidos@neuroforge.io" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
algorithms-lab = [
  "numba>=0.59",
  "scipy>=1.11",
]
agentic-chess = [
  "python-chess",
]
algorithms-lab-visual = [
  "pygame",
]
algorithms-lab-gpu = [
  "cupy",
  "pyopencl",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
