[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge_forge"
version = "1.0.0"
description = "Eidosian Knowledge Forge - Graph-based knowledge management with concept mapping and pathfinding."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
    { name = "Eidos", email = "syntheticeidos@gmail.com" },
]
keywords = ["knowledge-graph", "ontology", "concept-mapping", "graphrag", "eidos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "networkx>=3.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
]
viz = [
    "matplotlib>=3.8.0",
    "pyvis>=0.3.2",
]
rdf = [
    "rdflib>=7.0.0",
]
reasoning = [
    "rdflib>=7.0.0",
    "owlrl>=6.0.2",
]

[project.scripts]
knowledge-forge = "knowledge_forge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_forge"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
