[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm_forge"
version = "0.1.0"
description = "Eidosian LLM Forge - Model Abstraction, Comparison, and Fine-tuning Interfaces."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
    { name = "Eidos", email = "syntheticeidos@gmail.com" },
]
keywords = ["llm", "ai", "comparison", "fine-tuning", "openai", "huggingface"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "transformers>=4.39.0",
    "torch>=2.1.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[project.scripts]
llm-forge = "llm_forge.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_forge"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312"]