[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm_forge"
version = "1.0.0"
description = "Eidosian LLM Forge - Unified LLM interface with caching and comparison."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
    { name = "Eidos", email = "syntheticeidos@gmail.com" },
]
keywords = ["llm", "ai", "ollama", "openai", "embeddings", "eidos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
]
openai = [
    "openai>=1.0.0",
]

[project.scripts]
llm-forge = "llm_forge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_forge"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312"]