[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory_forge"
version = "0.1.0"
description = "Eidosian Memory Forge - Episodic, Semantic, and Procedural Memory Systems."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
    { name = "Eidos", email = "syntheticeidos@gmail.com" },
]
keywords = ["memory", "vector-db", "rag", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "chromadb>=0.4.0",
    "pydantic>=2.6.0",
    "numpy>=1.26.0",
    "networkx>=3.0",  # For Knowledge Graph basics
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["libs", "tools", "projects"]  # Adjust based on actual structure

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
