[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory_forge"
version = "1.0.0"
description = "Eidosian Memory Forge - Tiered memory system with auto-context and introspection."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
    { name = "Eidos", email = "syntheticeidos@gmail.com" },
]
keywords = ["memory", "vector-db", "rag", "knowledge-graph", "tiered-memory", "eidos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "chromadb>=0.4.0",
    "pydantic>=2.6.0",
    "numpy>=1.26.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
memory-forge = "memory_forge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_forge"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=memory_forge --cov-report=term-missing"
testpaths = ["tests"]
