[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "narrative_forge"
version = "0.1.0"
description = "Eidosian Narrative Forge - Interactive Storytelling and Chat Engine."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
    { name = "Eidos", email = "syntheticeidos@gmail.com" },
]
keywords = ["narrative", "chat", "rpg", "engine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "transformers>=4.39.0",
    "torch>=2.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
narrative = "narrative_forge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/narrative_forge"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
