[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refactor_forge"
version = "0.1.0"
description = "Eidosian Refactor Forge - Automated Code Transformation."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
    { name = "Eidos", email = "syntheticeidos@gmail.com" },
]
keywords = ["refactoring", "libcst", "ast", "clean-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "libcst>=1.1.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
refactor = "refactor_forge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["refactor_forge", "refactor_core.py", "analyzer.py", "cli.py"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
